--- a/kubernetes/mongo.yaml
+++ b/kubernetes/mongo.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb-deployment
-  labels: mongodb
+  labels:
+    app: mongodb
 spec:
   replicas: 1
   selector:
