add mongo-express public accesible with loadbalancer service & nodeport

--- a/kubernetes/mongo-express.yaml
+++ b/kubernetes/mongo-express.yaml
@@ -39,9 +39,11 @@ kind: Service
 metadata:
   name: mongo-express
 spec:
-  type: ClusterIP
   selector:
     app: mongo-express
+  type: LoadBalancer
   ports:
-    - port: 8081
+    - protocol: TCP
+      port: 8081
       targetPort: 8081
+      nodePort: 30000
