--- a/kubernetes/mongo-express.yaml
+++ b/kubernetes/mongo-express.yaml
@@ -37,7 +37,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo-express
+  name: mongo-express-service
 spec:
   selector:
     app: mongo-express
