--- a/kubernetes/mongo-express.yaml
+++ b/kubernetes/mongo-express.yaml
@@ -34,7 +34,9 @@ spec:
                   name: mongo-secret
                   key: mongo-root-password
             - name: ME_CONFIG_BASICAUTH_USERNAME
+              value: admin
             - name: ME_CONFIG_BASICAUTH_PASSWORD
+              value: admin
 ---
 apiVersion: v1
 kind: Service
